--- a/CBTortoiseSVN.cbp
+++ b/CBTortoiseSVN.cbp
@@ -13,18 +13,19 @@ Hosted at http://tools.assembla.com/svn/CBTortoiseSVN]]>
 		</Option>
 		<Build>
 			<Target title="default">
-				<Option output="bin\CBTortoiseSVN.dll" prefix_auto="0" extension_auto="0" />
+				<Option output="bin/CBTortoiseSVN.dll" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="v:\codeblocks_dbg\codeblocks.exe" />
+				<Option host_application="v:/codeblocks_dbg/codeblocks.exe" />
+				<Option run_host_application_in_terminal="0" />
 				<ExtraCommands>
 					<Add after="zip -j9 bin\CBTortoiseSVN.zip manifest.xml" />
 				</ExtraCommands>
 			</Target>
 			<Environment>
-				<Variable name="WX_SUFFIX" value="u" />
 				<Variable name="WX_CFG" value="" />
+				<Variable name="WX_SUFFIX" value="u" />
 			</Environment>
 		</Build>
 		<VirtualTargets>
@@ -44,26 +45,25 @@ Hosted at http://tools.assembla.com/svn/CBTortoiseSVN]]>
 			<Add option="-DHAVE_W32API_H" />
 			<Add option="-DwxUSE_UNICODE" />
 			<Add directory="$(#wx.include)" />
-			<Add directory="$(#wx.lib)\gcc_dll$(WX_CFG)\msw$(WX_SUFFIX)" />
-			<Add directory="$(#wx)\contrib\include" />
+			<Add directory="$(#wx.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+			<Add directory="$(#wx)/contrib/include" />
 			<Add directory="$(#cb.include)" />
-			<Add directory="$(#cb.include)\tinyxml" />
-			<Add directory="$(#cb.include)\wxscintilla\include" />
-			<Add directory="$(#cb)\sdk" />
-			<Add directory="$(#cb)\sdk\tinyxml" />
-			<Add directory="$(#cb)\sdk\wxscintilla\include" />
+			<Add directory="$(#cb.include)/tinyxml" />
+			<Add directory="$(#cb.include)/wxscintilla/include" />
+			<Add directory="$(#cb)/sdk" />
+			<Add directory="$(#cb)/sdk/tinyxml" />
+			<Add directory="$(#cb)/sdk/wxscintilla/include" />
 		</Compiler>
 		<ResourceCompiler>
 			<Add directory="$(#wx.include)" />
 		</ResourceCompiler>
 		<Linker>
 			<Add library="codeblocks" />
-			<Add library="wxscintilla" />
 			<Add library="wxmsw28$(WX_SUFFIX)" />
-			<Add directory="$(#wx.lib)\gcc_dll$(WX_CFG)" />
+			<Add directory="$(#wx.lib)/gcc_dll$(WX_CFG)" />
 			<Add directory="$(#cb.lib)" />
-			<Add directory="$(#cb)\devel" />
-			<Add directory="$(#cb)\sdk\tinyxml" />
+			<Add directory="$(#cb)/devel" />
+			<Add directory="$(#cb)/sdk/tinyxml" />
 		</Linker>
 		<Unit filename="CBSvnPluginManager.cpp" />
 		<Unit filename="CBSvnPluginManager.h" />
@@ -86,8 +86,8 @@ Hosted at http://tools.assembla.com/svn/CBTortoiseSVN]]>
 		</Unit>
 		<Unit filename="utils.cpp" />
 		<Unit filename="utils.h" />
-		<Unit filename="wxsmith\ConfigDialog.wxs" />
-		<Unit filename="wxsmith\TwoPaneSelectionDialog.wxs" />
+		<Unit filename="wxsmith/ConfigDialog.wxs" />
+		<Unit filename="wxsmith/TwoPaneSelectionDialog.wxs" />
 		<Extensions>
 			<code_completion />
 			<envvars />
@@ -95,9 +95,9 @@ Hosted at http://tools.assembla.com/svn/CBTortoiseSVN]]>
 			<wxsmith version="1">
 				<gui name="wxWidgets" src="" main="" init_handlers="necessary" language="CPP" />
 				<resources>
-					<wxDialog wxs="wxsmith/ConfigDialog.wxs" src="ConfigDialog.cpp" hdr="ConfigDialog.h" name="ConfigDialog" language="CPP" />
-					<wxDialog wxs="wxsmith/TwoPaneSelectionDialog.wxs" src="TwoPaneSelectionDialog.cpp" hdr="TwoPaneSelectionDialog.h" name="TwoPaneSelectionDialog" language="CPP" />
-					<wxDialog wxs="wxsmith/CustomConfigDialog.wxs" src="CustomConfigDialog.cpp" hdr="CustomConfigDialog.h" name="CustomConfigDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/ConfigDialog.wxs" src="ConfigDialog.cpp" hdr="ConfigDialog.h" fwddecl="0" i18n="1" name="ConfigDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/TwoPaneSelectionDialog.wxs" src="TwoPaneSelectionDialog.cpp" hdr="TwoPaneSelectionDialog.h" fwddecl="0" i18n="1" name="TwoPaneSelectionDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/CustomConfigDialog.wxs" src="CustomConfigDialog.cpp" hdr="CustomConfigDialog.h" fwddecl="0" i18n="1" name="CustomConfigDialog" language="CPP" />
 				</resources>
 			</wxsmith>
 		</Extensions>
